[MOD] fix stretch image bug

--- a/src/App/App.css
+++ b/src/App/App.css
@@ -55,6 +55,7 @@
 
   .sectionImageLeft {
     margin-right: 0em;
+    object-fit: cover;
   }
 
   .left-text {
@@ -169,6 +170,7 @@
 
   .sectionImageLeft {
     margin-right: 0em;
+    object-fit: cover;
   }
 
   .left-text {
